# uk-postcode

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
tests/: exhaustive.rs  extractors.rs  fix.rs  parse.rs  spec_added.rs  statics.rs
tests/common/: mod.rs
tests/fixtures/: sample_postcodes.txt
