[package]
name = "uk-postcode"
version = "0.1.0"
edition = "2021"
description = "UK postcode parse/validate/normalize"
license = "MIT"
repository = "https://github.com/hey-jj/uk-postcode"
readme = "README.md"

[dependencies]

[dev-dependencies]
# Fixture files are JSON. serde and serde_json parse them in the test harness.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
