[package]
name = "uk-postcode"
version = "0.1.0"
edition = "2021"
description = "Parse, validate, and normalize UK postcodes with no dependencies"
license = "MIT"
repository = "https://github.com/hey-jj/uk-postcode"
readme = "README.md"
keywords = ["postcode", "postal-code", "uk", "validation", "parser"]
categories = ["parser-implementations", "text-processing", "internationalization"]

[dependencies]

[dev-dependencies]
# Fixture files are JSON. serde and serde_json parse them in the test harness.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
